# EFTB-org.github.io

./: .gitignore  README.md  hugo_stats.json  package-lock.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/workflows/: deploy.yml
config/_default/: hugo.toml  params.toml
custom_layouts/shortcodes/: audio-player.html  (+4 more)
frontend/: package.json  pnpm-lock.yaml
layouts/: index.html
python_scripts/: .env.example  .gitignore  README.md  add_cleaned_row.py  convert-to-mp3.sh  create_voice_by_gemini.py  generate_eng_audio.py  generate_header_audios.py  generate_lesson_audio_from_json.py  generate_multilingual_audio.py  generate_vie_audio.py  generate_vocab_audios.py  lession1.py  lession2.py  louder.py  make_audios.py  pyproject.toml  test_gemini.py  wav_to_mp3.py
python_scripts/__marimo__/session/: lession1.py.json  lession2.py.json
python_scripts/audio_configs/: lesson-14.json
python_scripts/lesson_md/: lesson_6.md  lesson_7.md  lesson_8.md
python_scripts/oneoffs/: generate_voice_chatterbox.py  scratch_pad.py
python_scripts/processed_lessions/lession-1/: listening_part1.md  listening_part2.md  sentences.md  sentences_cleaned.md  sentences_cleaned_audio.md  vocabularies.md  vocabularies_cleaned.md  vocabularies_cleaned_audio.md
python_scripts/processed_lessions/lession-2/: prepare.py
python_scripts/processed_lessions/lession-2/__marimo__/session/: prepare.py.json
python_scripts/raw_lessions/: EFTB-lession-1.md  EFTB-lession-1_updated.md  EFTB-lession-2.md
python_scripts/tts/: groq_eng.py
(+113 files in other folders)
