[project]
name = "python-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.29.0",
    "groq>=0.31.0",
    "gTTS>=2.5.3",
    "markitdown>=0.0.1a3",
    "mdpd>=0.2.1",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]
